// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDataTable should render correctly with a custom className 1`] = `
<div
  style={
    Object {
      "overflow": "visible",
      "width": 0,
    }
  }
>
  <div
    className="ReactVirtualized__Table bpk-data-table custom-data-table"
    role="grid"
    style={Object {}}
  >
    <div
      className="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
      role="row"
      style={
        Object {
          "height": 60,
          "overflow": "hidden",
          "paddingRight": 0,
          "width": 0,
        }
      }
    >
      <div
        aria-label="Name"
        aria-sort="ascending"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "0 1 100px",
            "flex": "0 1 100px",
            "msFlex": "0 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="bpk-data-table-column__header"
          title="Name"
        >
          Name
        </span>
        <div
          className="bpk-data-table-column__sort-icons"
        >
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
            />
          </svg>
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
            />
          </svg>
        </div>
      </div>
      <div
        aria-label="Description"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "1 1 100px",
            "flex": "1 1 100px",
            "msFlex": "1 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="bpk-data-table-column__header"
          title="Description"
        >
          Description
        </span>
        <div
          className="bpk-data-table-column__sort-icons"
        >
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
            />
          </svg>
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
            />
          </svg>
        </div>
      </div>
      <div
        aria-label="Bla"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "0 1 100px",
            "flex": "0 1 100px",
            "msFlex": "0 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="bpk-data-table-column__header"
          title="Bla"
        >
          Bla
        </span>
        <div
          className="bpk-data-table-column__sort-icons"
        >
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
            />
          </svg>
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-label="grid"
      aria-readonly={true}
      className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
      onScroll={[Function]}
      role="rowgroup"
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "boxSizing": "border-box",
          "direction": undefined,
          "height": 140,
          "overflowX": "hidden",
          "overflowY": "hidden",
          "position": "relative",
          "width": 0,
          "willChange": "transform",
        }
      }
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`BpkDataTable should render correctly with a specified width 1`] = `
<div
  className="ReactVirtualized__Table bpk-data-table"
  role="grid"
  style={Object {}}
>
  <div
    className="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
    role="row"
    style={
      Object {
        "height": 60,
        "overflow": "hidden",
        "paddingRight": 0,
        "width": 400,
      }
    }
  >
    <div
      aria-label="Name"
      aria-sort="ascending"
      className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="columnheader"
      style={
        Object {
          "WebkitFlex": "0 1 100px",
          "flex": "0 1 100px",
          "msFlex": "0 1 100px",
        }
      }
      tabIndex={0}
    >
      <span
        className="bpk-data-table-column__header"
        title="Name"
      >
        Name
      </span>
      <div
        className="bpk-data-table-column__sort-icons"
      >
        <svg
          className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
          />
        </svg>
        <svg
          className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-label="Description"
      className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="columnheader"
      style={
        Object {
          "WebkitFlex": "1 1 100px",
          "flex": "1 1 100px",
          "msFlex": "1 1 100px",
        }
      }
      tabIndex={0}
    >
      <span
        className="bpk-data-table-column__header"
        title="Description"
      >
        Description
      </span>
      <div
        className="bpk-data-table-column__sort-icons"
      >
        <svg
          className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
          />
        </svg>
        <svg
          className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-label="Bla"
      className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="columnheader"
      style={
        Object {
          "WebkitFlex": "0 1 100px",
          "flex": "0 1 100px",
          "msFlex": "0 1 100px",
        }
      }
      tabIndex={0}
    >
      <span
        className="bpk-data-table-column__header"
        title="Bla"
      >
        Bla
      </span>
      <div
        className="bpk-data-table-column__sort-icons"
      >
        <svg
          className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
          />
        </svg>
        <svg
          className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-label="grid"
    aria-readonly={true}
    className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
    onScroll={[Function]}
    role="rowgroup"
    style={
      Object {
        "WebkitOverflowScrolling": "touch",
        "boxSizing": "border-box",
        "direction": undefined,
        "height": 140,
        "overflowX": "hidden",
        "overflowY": "hidden",
        "position": "relative",
        "width": 400,
        "willChange": "transform",
      }
    }
    tabIndex={0}
  >
    <div
      className="ReactVirtualized__Grid__innerScrollContainer"
      role="rowgroup"
      style={
        Object {
          "height": 120,
          "maxHeight": 120,
          "maxWidth": 400,
          "overflow": "hidden",
          "pointerEvents": "",
          "position": "relative",
          "width": "auto",
        }
      }
    >
      <div
        aria-label="row"
        className="ReactVirtualized__Table__row bpk-data-table__row"
        onClick={[Function]}
        role="row"
        style={
          Object {
            "height": 60,
            "left": 0,
            "overflow": "hidden",
            "paddingRight": 0,
            "position": "absolute",
            "top": 0,
            "width": 400,
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Table__rowColumn bpk-data-table-column"
          role="gridcell"
          style={
            Object {
              "WebkitFlex": "0 1 100px",
              "flex": "0 1 100px",
              "msFlex": "0 1 100px",
              "overflow": "hidden",
            }
          }
          title="Jose"
        >
          Jose
        </div>
        <div
          className="ReactVirtualized__Table__rowColumn bpk-data-table-column"
          role="gridcell"
          style={
            Object {
              "WebkitFlex": "1 1 100px",
              "flex": "1 1 100px",
              "msFlex": "1 1 100px",
              "overflow": "hidden",
            }
          }
          title="Software Engineer"
        >
          Software Engineer
        </div>
        <div
          className="ReactVirtualized__Table__rowColumn bpk-data-table-column"
          role="gridcell"
          style={
            Object {
              "WebkitFlex": "0 1 100px",
              "flex": "0 1 100px",
              "msFlex": "0 1 100px",
              "overflow": "hidden",
            }
          }
          title="Bla"
        >
          Bla
        </div>
      </div>
      <div
        aria-label="row"
        className="ReactVirtualized__Table__row bpk-data-table__row"
        onClick={[Function]}
        role="row"
        style={
          Object {
            "height": 60,
            "left": 0,
            "overflow": "hidden",
            "paddingRight": 0,
            "position": "absolute",
            "top": 60,
            "width": 400,
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Table__rowColumn bpk-data-table-column"
          role="gridcell"
          style={
            Object {
              "WebkitFlex": "0 1 100px",
              "flex": "0 1 100px",
              "msFlex": "0 1 100px",
              "overflow": "hidden",
            }
          }
          title="Rolf"
        >
          Rolf
        </div>
        <div
          className="ReactVirtualized__Table__rowColumn bpk-data-table-column"
          role="gridcell"
          style={
            Object {
              "WebkitFlex": "1 1 100px",
              "flex": "1 1 100px",
              "msFlex": "1 1 100px",
              "overflow": "hidden",
            }
          }
          title="Some guy"
        >
          Some guy
        </div>
        <div
          className="ReactVirtualized__Table__rowColumn bpk-data-table-column"
          role="gridcell"
          style={
            Object {
              "WebkitFlex": "0 1 100px",
              "flex": "0 1 100px",
              "msFlex": "0 1 100px",
              "overflow": "hidden",
            }
          }
          title="Bla"
        >
          Bla
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BpkDataTable should render correctly with multiple columns 1`] = `
<div
  style={
    Object {
      "overflow": "visible",
      "width": 0,
    }
  }
>
  <div
    className="ReactVirtualized__Table bpk-data-table"
    role="grid"
    style={Object {}}
  >
    <div
      className="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
      role="row"
      style={
        Object {
          "height": 60,
          "overflow": "hidden",
          "paddingRight": 0,
          "width": 0,
        }
      }
    >
      <div
        aria-label="Name"
        aria-sort="ascending"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "0 1 100px",
            "flex": "0 1 100px",
            "msFlex": "0 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="bpk-data-table-column__header"
          title="Name"
        >
          Name
        </span>
        <div
          className="bpk-data-table-column__sort-icons"
        >
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
            />
          </svg>
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
            />
          </svg>
        </div>
      </div>
      <div
        aria-label="Description"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "1 1 100px",
            "flex": "1 1 100px",
            "msFlex": "1 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="bpk-data-table-column__header"
          title="Description"
        >
          Description
        </span>
        <div
          className="bpk-data-table-column__sort-icons"
        >
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
            />
          </svg>
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
            />
          </svg>
        </div>
      </div>
      <div
        aria-label="Bla"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "0 1 100px",
            "flex": "0 1 100px",
            "msFlex": "0 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="bpk-data-table-column__header"
          title="Bla"
        >
          Bla
        </span>
        <div
          className="bpk-data-table-column__sort-icons"
        >
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
            />
          </svg>
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-label="grid"
      aria-readonly={true}
      className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
      onScroll={[Function]}
      role="rowgroup"
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "boxSizing": "border-box",
          "direction": undefined,
          "height": 140,
          "overflowX": "hidden",
          "overflowY": "hidden",
          "position": "relative",
          "width": 0,
          "willChange": "transform",
        }
      }
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`BpkDataTable should render correctly with no data; only headers 1`] = `
<div
  style={
    Object {
      "overflow": "visible",
      "width": 0,
    }
  }
>
  <div
    className="ReactVirtualized__Table bpk-data-table"
    role="grid"
    style={Object {}}
  >
    <div
      className="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
      role="row"
      style={
        Object {
          "height": 60,
          "overflow": "hidden",
          "paddingRight": 0,
          "width": 0,
        }
      }
    >
      <div
        aria-label="Name"
        aria-sort="ascending"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "0 1 100px",
            "flex": "0 1 100px",
            "msFlex": "0 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="bpk-data-table-column__header"
          title="Name"
        >
          Name
        </span>
        <div
          className="bpk-data-table-column__sort-icons"
        >
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
            />
          </svg>
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
            />
          </svg>
        </div>
      </div>
      <div
        aria-label="Description"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "1 1 100px",
            "flex": "1 1 100px",
            "msFlex": "1 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="bpk-data-table-column__header"
          title="Description"
        >
          Description
        </span>
        <div
          className="bpk-data-table-column__sort-icons"
        >
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
            />
          </svg>
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
            />
          </svg>
        </div>
      </div>
      <div
        aria-label="Bla"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "0 1 100px",
            "flex": "0 1 100px",
            "msFlex": "0 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="bpk-data-table-column__header"
          title="Bla"
        >
          Bla
        </span>
        <div
          className="bpk-data-table-column__sort-icons"
        >
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
            />
          </svg>
          <svg
            className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-label="grid"
      aria-readonly={true}
      className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
      onScroll={[Function]}
      role="rowgroup"
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "boxSizing": "border-box",
          "direction": undefined,
          "height": 140,
          "overflowX": "hidden",
          "overflowY": "hidden",
          "position": "relative",
          "width": 0,
          "willChange": "transform",
        }
      }
      tabIndex={0}
    />
  </div>
</div>
`;
